--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8001:8000"
     volumes:
-      - ./app:/app
+      - ./recommendation:/recommendation
       - dev-static-data:/vol/web
     command: >
       sh -c "
