--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ typing_extensions==4.11.0
 uritemplate==4.1.1
 whitenoise==6.5.0
 django-jazzmin==4.300
-docutils
+docutils==00
 python-decouple==3.8000
 django-filter==24.30
 
