--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       args:
-        - DEV=true
+        - DEV=tru
     ports:
       - "8001:8000"
     volumes:
